provision/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thangle-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: cont
          image: letanthang/nc_user
          ports:
            - containerPort: 9090
              name: web
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "75Mi"
              cpu: "75m"
