provision/k8s/ingress-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/user/
            backend:
              serviceName: user-svc
              servicePort: 9090
